[project]
name = "monkey-agentpluginapi"
license = "GPLv3"
requires-python = "^3.11"


[tool.black]
line-length = 100

[tool.cruft]
skip = [
    "agentpluginapi/__init__.py",
    "README.md",
    "CHANGELOG.md",
    "vulture_allowlist.py"
]

[tool.isort]
known_first_party = "agentpluginapi"
line_length = 100
skip_glob="**/__init__.py"
### for compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s.%(funcName)s.%(lineno)d: %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-v --capture=sys tests"

[tool.vulture]
exclude=[]
paths = ["agentpluginapi", "vulture_allowlist.py"]

[tool.poetry]
name = "monkey-agentpluginapi"
version = "v0.9.0"
description = "Interfaces and components that comprise the Infection Monkey Agent Plugin API"
authors = [
    "Ilija Lazoroski <ilija.la@live.com>",
    "Kekoa Kaaikala <kekoa.kaaikala@gmail.com>",
    "Mike Salvatore <mike.s.salvatore@gmail.com>",
    "Shreya Malviya <shreya.malviya@gmail.com>",
    "vakarisz <vakarisz@yahoo.com>"
]
license = "GPLv3"
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11"
]
repository = "https://github.com/guardicode/agentpluginapi"
readme = "README.md"
packages = [{include="agentpluginapi"}]
include = ["CHANGELOG.md", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
monkey-types = "*"
monkeytoolbox = "*"
egg_timer = "^1.3.0"
monkeyevents = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "23.9.1"
dlint = "0.14.1"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.5.1"
pudb = "^2022.1.2"
pynvim = "^0.4.3"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^3.3.1"
vulture = "2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
